--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     </style>
 </head>
 <body>
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2171.1508485798095!2d24.114102377328877!3d57.031842073584414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eec5ff32d8c535%3A0xd9c333000ace8aef!2sEmmas%20iela%2028%2C%20Zieme%C4%BCu%20rajons%2C%20R%C4%ABga%2C%20LV-1015!5e0!3m2!1sen!2slv!4v1737899936437!5m2!1sen!2slv" 
-        allowfullscreen=""
-        sandbox="allow-same-origin allow-scripts allow-pointer-lock allow-forms allow-popups allow-popups-to-escape-sandbox">
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!4v1737916874654!6m8!1m7!1sgFCGyZeIFQdG_HEOztc4fw!2m2!1d57.92868436506481!2d-5.197638306196232!3f276.59!4f-3.3400000000000034!5f1.9587109090973311" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
